Make sure nothing is hidden by the bottom bar

--- a/app/assets/stylesheets/navbar.css.sass
+++ b/app/assets/stylesheets/navbar.css.sass
@@ -1,3 +1,5 @@
+body
+  padding-bottom: 80px
 nav.navbar
   box-shadow: 0 0 5px #888888
 
